# python_work

./: README.md  強化学習メモ.md  機械学習メモver2.md
gmo_yasu/: SmaCross.html  (+1 more)
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/: CMakeLists.txt  MANIFEST.in.fragment  README.md  builder.bat  builder.sh  builder_MSYS.bat  license.txt  requirements.txt  setup.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/ASRCAISim1/: GymManager.py  __init__.py  common.py  rangeTable.npz
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/ASRCAISim1/addons/: __init__.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/ASRCAISim1/callback/: EpisodeMonitor.py  __init__.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/ASRCAISim1/config/: Agent.json  Asset.json  Controller.json  RulerAndReward.json  Viewer.json
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/ASRCAISim1/logger/: GUIStateLogger.py  GodViewLogger.py  LoggerSample.py  MultiEpisodeLogger.py  __init__.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/ASRCAISim1/policy/: StandalonePolicy.py  __init__.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/ASRCAISim1/share/cmake/: ASRCAISim1Config.cmake
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/ASRCAISim1/utility/: GraphicUtility.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/ASRCAISim1/viewer/: GodView.py  GodViewLoader.py  PygameViewer.py  PygameViewerLoader.py  __init__.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/AgentIsolation/: AgentIsolationConfig.cmake  CMakeLists.txt  MANIFEST.in.fragment  builder.bat  builder.py  builder.sh  builder_MSYS.bat
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/AgentIsolation/AgentIsolation/: AgentDelegatee.py  AgentDelegator.py  PolicyDelegatee.py  PolicyDelegator.py  __init__.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/AgentIsolation/include/: AgentDelegatorBase.h  AgentIsolation.h
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/AgentIsolation/src/: AgentDelegatorBase.cpp  AgentIsolation.cpp  Main.cpp
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/HandyRLUtility/: MANIFEST.in.fragment  RecurrentBlock.py  StandaloneHandyRLPolicy.py  distribution.py  model.py  util.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/MatchMaker/: MANIFEST.in.fragment  MatchMaker.py  MatchMakerForRay.py  PayOff.py  TwoTeamCombatMatchMaker.py  util.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/rayUtility/: MANIFEST.in.fragment  RayManager.py  __init__.py  requirements.txt
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/rayUtility/extension/evaluation/: StandaloneRayPolicy.py  __init__.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/rayUtility/logger/: ExpertTrajectoryWriter.py  RayMultiEpisodeLogger.py  __init__.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/rayUtility/utility/: ValuePasser.py  __init__.py  common.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/addons/torch_truncnorm/: MANIFEST.in.fragment  TruncatedNormal.py  __init__.py  builder.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/include/: Agent.h  Asset.h  Callback.h  Common.h  CommunicationBuffer.h  ConfigDispatcher.h  Controller.h  CoordinatedFighter.h  Entity.h  Factory.h  Fighter.h  FilteredWeakIterable.h  FlightControllerUtility.h  GUIDataFrameCreator.h  JsonMutableFromPython.h  MassPointFighter.h  MathUtility.h  Missile.h  MotionState.h  PhysicalAsset.h  Propulsion.h  Quaternion.h  R5AirToAirCombatBasicReward01.h  R5AirToAirCombatRuler01.h  R5EkkerMDT.h  R5InitialFighterAgent01.h  R5Missile.h  Reward.h  Ruler.h  Sensor.h  SimulationManager.h  SixDoFFighter.h  StaticCollisionAvoider2D.h  Track.h  Units.h  Utility.h  Viewer.h  WinLoseReward.h
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/sample/modules/OriginalModelSample/: CMakeLists.txt  MANIFEST.in.fragment  MANIFEST.in.self  builder.bat  builder.sh  builder_MSYS.bat  setup.py
signate/202312_air_combat_challenge/simulator_dist/simulator_dist/root/src/: Agent.cpp  Asset.cpp  Callback.cpp  Common.cpp  CommunicationBuffer.cpp  ConfigDispatcher.cpp  Controller.cpp  CoordinatedFighter.cpp  Entity.cpp  Factory.cpp  Fighter.cpp  FlightControllerUtility.cpp  GUIDataFrameCreator.cpp  JsonMutableFromPython.cpp  Main.cpp  MassPointFighter.cpp  MathUtility.cpp  Missile.cpp  MotionState.cpp  PhysicalAsset.cpp  Propulsion.cpp  Quaternion.cpp  R5AirToAirCombatBasicReward01.cpp  R5AirToAirCombatRuler01.cpp  R5EkkerMDT.cpp  R5InitialFighterAgent01.cpp  R5Missile.cpp  Reward.cpp  Ruler.cpp  Sensor.cpp  SimulationManager.cpp  SixDoFFighter.cpp  StaticCollisionAvoider2D.cpp  Track.cpp  Units.cpp  Utility.cpp  Viewer.cpp  WinLoseReward.cpp
(+207 files in other folders)
